<resources>
    <string name="app_name">eSettings</string>
    <string name="NO_SIMCard">No SIM card detected</string>
    <string name="unknown_SIM_number">Unknown</string>
    <string name="error">No Information</string>
    <string name="sim_card_text_menu">SIM Card</string>
    <string name="sim_card_text_menu_desc">SIM Card icon</string>

    <string name="sim_card_MSISDN">Number:</string>
    <string name="sim_card_country">Country:</string>
    <string name="sim_card_MNC">MNC:</string>
    <string name="sim_serial_number">SIM Serial Number:</string>
    <string name="sim_IMSI">IMSI:</string>


    <string name="battery_section">Battery</string>
    <string name="battery_temperature_label">Temperature:</string>
    <string name="battery_voltage_label">Voltage:</string>
    <string name="battery_plugged_label">Plugged:</string>
    <string name="battery_percentage_label">Percentage:</string>

    <string name="charging">Charging</string>
    <string name="truePlug">True</string>
    <string name="falsePlug">False</string>
    <string name="percentage">%</string>




</resources>
