<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sim_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.esettings.SimCardActivity">

    <TextView
        android:id="@+id/MSISDN_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sim_card_MSISDN"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/MSISDN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/MSISDN_Text"
        android:gravity="center"/>


    <TextView
        android:id="@+id/country_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_below="@+id/MSISDN_Text"
        android:gravity="center"
        android:text="@string/sim_card_country"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/country_text"
        android:layout_below="@+id/MSISDN"

        android:gravity="center"/>

    <TextView
        android:id="@+id/mnc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_below="@+id/country_text"
        android:gravity="center"
        android:text="@string/sim_card_MNC"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/mnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/mnc_text"
        android:layout_below="@+id/country"
        android:gravity="center"/>

    <TextView
        android:id="@+id/SIM_serialNumber_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_below="@+id/mnc_text"
        android:gravity="center"
        android:text="@string/sim_serial_number"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/SIM_serialNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/SIM_serialNumber_text"
        android:layout_below="@+id/mnc"
        android:gravity="center"/>

</RelativeLayout>
