<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sim_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.esettings.BatteryActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@mipmap/battery2" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp">
    <TextView
        android:id="@+id/percentage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/battery_percentage_label"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/percentage_text"
            android:gravity="center" />

        <TextView
        android:id="@+id/temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_below="@id/percentage_text"
        android:gravity="center"
        android:text="@string/battery_temperature_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/percentage"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/temperature_text"
        android:gravity="center" />

    <TextView
        android:id="@+id/voltage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature_text"
        android:gravity="center"
        android:text="@string/battery_voltage_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/voltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature_text"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/voltage_text"
        android:gravity="center" />

    <TextView
        android:id="@+id/plugged_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voltage_text"
        android:gravity="center"
        android:text="@string/battery_plugged_label"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/plugged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/voltage_text"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/plugged_text"
        android:gravity="center" />

    </RelativeLayout>


</RelativeLayout>
